# FuteStatsBr

./: README.md
futestats_backend/: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
futestats_backend/alembic/: env.py
futestats_backend/alembic/versions/: 0ecf71ba972a_corrigindo_array_das_cores_com_json.py  2a0360844ada_model_de_photo_suas_relacoes_com_team_e_.py  3f01f70c9c3a_corrigindo_array_das_cores.py  b36395c9a50d_adicionando_enum_na_tipagem.py  c62ec76ae715_migracao_inicial.py  d54054c26ffe_adicionando_mais_atributos_em_times_e_.py
futestats_backend/src/: main.py
futestats_backend/src/core/: config.py
futestats_backend/src/db/: base.py  session.py
futestats_backend/src/models/: __init__.py  competition_model.py  edition_model.py  enums.py  match_model.py  photo_model.py  ranking_model.py  stadium_model.py  team_model.py
futestats_backend/src/repository/: base_repository.py  competition_repository.py  image_repository.py  ranking_repository.py  stadium_repository.py  team_repository.py
futestats_backend/src/routes/: stadium_routes.py  team_routes.py
futestats_backend/src/schemas/: comepetition_schemas.py  photo_schemas.py  ranking_schemas.py  stadium_schemas.py  team_schemas.py
futestats_backend/src/scripts/: seed_db.py
futestats_backend/src/service/: image_service.py  stadium_service.py  team_service.py
futestats_frontend/: next.config.ts  package-lock.json  package.json
futestats_frontend/app/: page.tsx
futestats_frontend/src/app/: globals.css  layout.tsx  page.tsx
futestats_frontend/src/components/: Footer.tsx  (+2 more)
(+11 files in other folders)
